[gd_scene load_steps=17 format=3 uid="uid://br5vkv7cpawkf"]

[ext_resource type="Script" path="res://enemy/orange_critter.gd" id="1_wuueu"]
[ext_resource type="Script" path="res://enemy/body_orange_critter.gd" id="2_g5gka"]
[ext_resource type="Texture2D" uid="uid://cix26plb0tvgj" path="res://pics/enemy/jupiter_critter.png" id="2_kaqfl"]
[ext_resource type="Script" path="res://enemy/state/state_machine.gd" id="4_wqy8t"]
[ext_resource type="Script" path="res://enemy/state/enemy_idle.gd" id="5_jgqcm"]
[ext_resource type="Script" path="res://enemy/state/enemy_follow.gd" id="6_0wn8g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_coueb"]
radius = 32.0624

[sub_resource type="CircleShape2D" id="CircleShape2D_frla8"]
radius = 27.074

[sub_resource type="CircleShape2D" id="CircleShape2D_rsras"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bdukb"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rma0f"]
radius = 15.0333

[sub_resource type="Animation" id="Animation_f4yq2"]
resource_name = "attacking"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(0, 160, 320, 320), Rect2(320, 160, 320, 320), Rect2(0, 160, 320, 320)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/attack/coll:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("body/attack/coll2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("body/attack/coll3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("body/sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.25, 0.25)]
}

[sub_resource type="Animation" id="Animation_6hlu7"]
resource_name = "dead"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(480, 0, 160, 160)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_bdl0t"]
resource_name = "idle"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(0, 0, 160, 160), Rect2(160, 0, 160, 160)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 0.784583, 2.21914, 1),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(0.23, 0.27), Vector2(0.27, 0.23), Vector2(0.25, 0.25)]
}

[sub_resource type="Animation" id="Animation_hjsn5"]
resource_name = "moving"
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(0, 0, 160, 160), Rect2(320, 0, 160, 160), Rect2(160, 0, 160, 160)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h7483"]
_data = {
"attacking": SubResource("Animation_f4yq2"),
"dead": SubResource("Animation_6hlu7"),
"idle": SubResource("Animation_bdl0t"),
"moving": SubResource("Animation_hjsn5")
}

[node name="orange_critter" type="Node2D"]
script = ExtResource("1_wuueu")

[node name="body" type="CharacterBody2D" parent="."]
motion_mode = 1
script = ExtResource("2_g5gka")

[node name="coll" type="CollisionShape2D" parent="body"]
shape = SubResource("CircleShape2D_coueb")

[node name="sprite" type="Sprite2D" parent="body"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_kaqfl")
region_enabled = true
region_rect = Rect2(0, 0, 160, 160)

[node name="hitbox" type="Area2D" parent="body" groups=["enemy"]]

[node name="coll" type="CollisionShape2D" parent="body/hitbox"]
shape = SubResource("CircleShape2D_frla8")
debug_color = Color(0.698039, 0.490196, 0.129412, 0.419608)

[node name="attacked" type="Timer" parent="body/hitbox"]
wait_time = 0.1

[node name="attack" type="Area2D" parent="body" groups=["enemy_attack"]]

[node name="coll" type="CollisionShape2D" parent="body/attack"]
position = Vector2(-35, 0)
shape = SubResource("CircleShape2D_rsras")
disabled = true
debug_color = Color(0, 0.627451, 0.505882, 0.419608)

[node name="coll2" type="CollisionShape2D" parent="body/attack"]
position = Vector2(-12, -27)
shape = SubResource("CircleShape2D_bdukb")
disabled = true

[node name="coll3" type="CollisionShape2D" parent="body/attack"]
position = Vector2(-10, 27)
shape = SubResource("CircleShape2D_rma0f")
disabled = true

[node name="state_machine" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_wqy8t")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="state_machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_jgqcm")
enemy = NodePath("../../body")
move_speed = 3000

[node name="follow" type="Node" parent="state_machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_0wn8g")
enemy = NodePath("../../body")
move_speed = 7000

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h7483")
}

[connection signal="area_entered" from="body/hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="body/hitbox/attacked" to="." method="_on_attacked_timeout"]
[connection signal="area_entered" from="body/attack" to="." method="_on_attack_area_entered"]
[connection signal="area_exited" from="body/attack" to="." method="_on_attack_area_exited"]
